# Q4_2025_Accelerated_Ghazal

./: .gitignore
accel-pinocchio-fundraiser/: Cargo.toml  package-lock.json  package.json
accel-pinocchio-fundraiser/src/: error.rs  lib.rs
accel-pinocchio-fundraiser/src/instructions/: checker.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
accel-pinocchio-fundraiser/src/state/: contributor.rs  fundraiser.rs  mod.rs
accel-pinocchio-fundraiser/src/tests/: mod.rs
accel-pinocchio-fundraiser/tests/: fundraiser.web3.test.ts
ai_escrow_arbiter/: Anchor.toml  Dockerfile  fly-mainnet.toml  package.json
ai_escrow_arbiter/app/: package.json  tsconfig.json
ai_escrow_arbiter/app/public/idl/: simple_agent.json
ai_escrow_arbiter/app/src/: App.tsx
ai_escrow_arbiter/app/src/components/: Wallet.tsx
ai_escrow_arbiter/llm_oracle/: Cargo.toml
ai_escrow_arbiter/llm_oracle/src/: main.rs
ai_escrow_arbiter/migrations/: deploy.ts
ai_escrow_arbiter/programs/escrow/: Cargo.toml
ai_escrow_arbiter/programs/escrow/src/: lib.rs  state.rs
ai_escrow_arbiter/programs/escrow/src/instructions/: dispute.rs  make.rs  mod.rs  refund.rs  take.rs
ai_escrow_arbiter/programs/simple-agent/: Cargo.toml
ai_escrow_arbiter/programs/simple-agent/src/: lib.rs
ai_escrow_arbiter/programs/solana-gpt-oracle/: Cargo.toml
ai_escrow_arbiter/programs/solana-gpt-oracle/src/: lib.rs
ai_escrow_arbiter/tests/: escrow-dispute-real.spec.ts  escrow-dispute.spec.ts  solana-gpt-oracle.ts  test-simple-agent.ts
week1-challenge/: .gitignore  Anchor.toml  Cargo.toml  package.json
week1-challenge/idls/: whitelist.json
week1-challenge/programs/vault/: Cargo.toml
week1-challenge/programs/vault/src/: constants.rs  lib.rs
week1-challenge/programs/vault/src/instructions/: deposit.rs  initialize_vault.rs  mod.rs  withdraw.rs
week1-challenge/programs/vault/src/state/: vault.rs
week1-challenge/programs/vault/src/tests/: constants.rs  cpi.rs  mod.rs  pda.rs  utils.rs
week1-challenge/programs/whitelist/: Cargo.toml
week1-challenge/programs/whitelist/src/: constants.rs  error.rs  lib.rs
week1-challenge/programs/whitelist/src/instructions/: enroll_address.rs  init_extra_meta.rs  mint_with_extensions.rs  mod.rs  on_transfer_gate.rs  setup_registry.rs  toggle_enrollment.rs
week1-challenge/programs/whitelist/src/state/: enrollment.rs  mod.rs
week1-challenge/programs/whitelist/src/tests/: constants.rs  cpi.rs  pda.rs  utils.rs
