[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
spl-tlv-account-resolution = "0.10.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"]}
spl-transfer-hook-interface = "0.10.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dev-dependencies]
litesvm = "^0.7"
litesvm-token = { version = "^0.7", features = ["token-2022"] }
solana-account = "^2.2"
solana-keypair = "^2.2"
solana-message = "^2.2"
solana-program = "^2.2"
solana-signer = "^2.2"
solana-transaction = "^2.2"
spl-associated-token-account = "7.0.0"
spl-transfer-hook-interface = "0.10.0"
whitelist = { path = "../whitelist" }
