[package]
name = "whitelist"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions"] }
anchor-spl = "0.32.1"
spl-discriminator = "0.4"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"

[dev-dependencies]
litesvm = "^0.7"
litesvm-token = { version = "^0.7", features = ["token-2022"] }
solana-account = "^2.2"
solana-keypair = "^2.2"
solana-message = "^2.2"
solana-program = "^2.2"
solana-signer = "^2.2"
solana-transaction = "^2.2"
spl-associated-token-account = "7.0.0"
spl-token-2022 = "^8"
spl-pod = "^0.5"
